@@ -24,6 +24,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
@@ -98,16 +99,32 @@ class FakeStorageModule extends AbstractVerticle {
 
     router.get(rootPath + "/:id").handler(this::get);
     router.delete(rootPath + "/:id").handler(this::delete);
+
+    router.get(rootPath + "/:id/formatted").handler(this::getByExternalId);
+    router.post("/source-storage/snapshots").handler(this::createSnapshot);
   }
 
   private void emulateFailureIfNeeded(RoutingContext routingContext) {
     if (shouldEmulateFailure(routingContext)) {
       final String body = endpointFailureDescriptor.getBody();
+      String bodyContains = endpointFailureDescriptor.getBodyContains();
+
+      if (bodyContains != null) {
+        String requestBody = routingContext.body().asString();
+        if (requestBody != null && requestBody.contains(bodyContains)) {
+          routingContext.response()
+            .setStatusCode(endpointFailureDescriptor.getStatusCode())
+            .putHeader(HttpHeaders.CONTENT_TYPE, endpointFailureDescriptor.getContentType())
+            .end(body);
+        } else {
+          routingContext.next();
+        }
+        return;
+      }
 
       routingContext.response()
         .setStatusCode(endpointFailureDescriptor.getStatusCode())
         .putHeader(HttpHeaders.CONTENT_TYPE, endpointFailureDescriptor.getContentType())
-        .putHeader(HttpHeaders.CONTENT_LENGTH, Integer.toString(body.length()))
         .end(body);
 
     } else {
@@ -310,7 +327,7 @@ class FakeStorageModule extends AbstractVerticle {
 
     Map<String, JsonObject> resourcesForTenant = getResourcesForTenant(context);
     List<String> queries = routingContext.queryParam("query");
-    String query = queries.size() == 1 ? queries.get(0) : "";
+    String query = queries.size() == 1 ? queries.getFirst() : "";
 
     if (query.startsWith("id==")) {
       resourcesForTenant.remove(query.substring(4));
@@ -340,10 +357,12 @@ class FakeStorageModule extends AbstractVerticle {
     Map<String, JsonObject> resourcesForTenant = getResourcesForTenant(context);
 
     if (resourcesForTenant.containsKey(id)) {
+      System.out.printf("Deleted %s resource: %s%n", recordTypeName, id);
       resourcesForTenant.remove(id);
 
       SuccessResponse.noContent(routingContext.response());
     } else {
+      System.out.printf("%s resource: %s%n for deletion is not found", recordTypeName, id);
       ClientErrorResponse.notFound(routingContext.response());
     }
   }
@@ -465,6 +484,47 @@ class FakeStorageModule extends AbstractVerticle {
     }
 
     return lastPreProcess;
+  }
+
+  private void createSnapshot(RoutingContext context) {
+    JsonObject snapshotRequest = context.body().asJsonObject();
+    JsonObject snapshotResponse = (snapshotRequest != null) ? snapshotRequest : new JsonObject();
+    snapshotResponse.put("status", "COMMITTED");
+    if (!snapshotResponse.containsKey("jobExecutionId")) {
+      snapshotResponse.put("jobExecutionId", UUID.randomUUID().toString());
+    }
+
+    JsonResponse.created(context.response(), snapshotResponse);
+  }
+
+  private void getByExternalId(RoutingContext routingContext) {
+    final String idType = routingContext.request().getParam("idType");
+    if (!"HOLDINGS".equals(idType)) {
+      ClientErrorResponse.notFound(routingContext.response());
+      return;
+    }
+
+    final String holdingsId = routingContext.request().getParam("id");
+    final WebContext context = new WebContext(routingContext);
+    final Map<String, JsonObject> recordsInTenant = getResourcesForTenant(context);
+
+    if (recordsInTenant == null) {
+      ClientErrorResponse.notFound(routingContext.response());
+      return;
+    }
+
+    final Optional<JsonObject> foundRecord = recordsInTenant.values().stream()
+      .filter(rec -> {
+        JsonObject externalIdsHolder = rec.getJsonObject("externalIdsHolder");
+        return externalIdsHolder != null && holdingsId.equals(externalIdsHolder.getString("holdingsId"));
+      })
+      .findFirst();
+
+    if (foundRecord.isPresent()) {
+      JsonResponse.success(routingContext.response(), foundRecord.get());
+    } else {
+      ClientErrorResponse.notFound(routingContext.response());
+    }
   }
 
   private void emulateFailure(RoutingContext routingContext) {
